# virtual-dom-gateway

./: .env.example  .gitignore  Cargo 2.toml  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: prometheus.yml
config/grafana/dashboards/: virtualdom-overview.json
config/grafana/datasources/: prometheus.yml
docker/: Dockerfile.gateway  Dockerfile.github-bridge
docs/adr/: 0001-grpc-protocol.md
fuzz/: Cargo.toml
proto/: buf.yaml  memory.proto
scripts/: mongo-init.js
src/conflict-resolver/: Cargo.toml
src/conflict-resolver/src/: main.rs
src/gateway/: Cargo.toml  build.rs
src/gateway/src/: auth.rs  config.rs  db.rs  error.rs  grpc.rs  main 2.rs  main.rs  metrics.rs  rest.rs  security.rs  service.rs  tekfly.virtualdom.v1.rs
src/github-bridge/: go.mod  main.go
src/github-bridge/internal/bridge/: bridge.go
src/github-bridge/internal/config/: config.go
src/github-bridge/internal/git/: operations.go
src/github-bridge/internal/metrics/: metrics.go
src/github-bridge/internal/mongodb/: client.go
src/mpc/: Cargo.toml
src/mpc/src/: main.rs
tests/fuzz/: README.md  create_corpus.py
tests/fuzz/fuzz_targets/: bson_parser.rs  grpc_service.rs
