[workspace]
members = [
    "src/gateway",
    "src/conflict-resolver",
    "src/mpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tekfly Engineering <engineering@tekfly.io>"]
edition = "2021"
license = "Proprietary"
homepage = "https://github.com/Tek-Fly/virtual-dom-gateway"
repository = "https://github.com/Tek-Fly/virtual-dom-gateway"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# MongoDB
mongodb = { version = "3.1", features = ["sync", "bson-serde_with"] }
bson = { version = "2.13", features = ["chrono-0_4"] }

# Cryptography
ring = "0.17"
rustls = "0.23"
jsonwebtoken = "9.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"

# Testing
mockall = "0.13"
proptest = "1.5"