[package]
name = "memory-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# MongoDB
mongodb.workspace = true
bson.workspace = true

# Cryptography
ring.workspace = true
rustls.workspace = true
jsonwebtoken.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Metrics
prometheus.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true

# Additional dependencies
futures = "0.3"
tower = "0.4"
hyper = "1.4"
axum = "0.7"
rustls-pemfile = "2.0"
prost-types = "0.13"
lazy_static = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
tokio-test = "0.4"